--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,30 @@ project(gc)
 
 include(CTest)
 
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1)
 
-option(BDWGC_INSTALL_CORD "Install cord" ON)
-option(BDWGC_SKIP_HEADERS "Skip installing header files" OFF)
-option(BDWGC_SKIP_TESTS "Skip building tests" OFF)
+# Customize CMake options by passing "-D<OPTION_NAME>=ON|OFF" in your command line
+option(INSTALL_CORD "Install cord" ON)
+option(INSTALL_HEADERS "Install header files" ON)
+option(INSTALL_TESTS "Install library tests" ON)
+option(ENABLE_THREADS "TODO" OFF)
+option(ENABLE_HANDLE_FORK "Attempt to ensure a usable collector after fork()" ON)
+option(ENABLE_THREAD_LOCAL_ALLOC "Turn on thread-local allocation optimization" ON)
+option(ENABLE_PARALLEL_MARK "Parallelize marking and free list construction" ON)
+option(ENABLE_GCJ_SUPPORT "Support for gcj" ON)
+option(ENABLE_DISCLAIM "Support alternative finalization interface" ON)
+option(ENABLE_JAVA_FINALIZATION "Support for java finalization" ON)
+option(ENABLE_ATOMIC_UNCOLLECTABLE "Support for atomic uncollectible allocation" ON)
+option(ENABLE_GC_DEBUG "Support for pointer back-tracing" OFF)
+option(ENABLE_REDIRECT_MALLOC "Redirect malloc and friends to GC routines" OFF)
+option(ENABLE_MMAP "Use mmap instead of sbrk to expand the heap" OFF)
+option(ENABLE_MUNMAP "Return page to the OS if empty for N collections" ON)
+option(ENABLE_DYNAMIC_LOADING "Enable tracing of dynamic library data roots" ON)
+option(ENABLE_REGISTER_MAIN_STATIC_DATA "Perform the initial guess of data root sets" ON)
+option(ENABLE_LARGE_CONFIG "Optimize for large heap or root set" OFF)
+option(ENABLE_GC_ASSERTIONS "Enable collector-internal assertion checking" OFF)
+option(ENABLE_THREADS_DISCOVERY "Enable threads discovery in GC" ON)
+option(ENABLE_CHECKSUM "Report erroneously cleared dirty bits" OFF)
 
 if (WIN32)
   add_definitions("-D_CRT_SECURE_NO_DEPRECATE")
@@ -44,7 +63,7 @@ if (APPLE)
     set(CMAKE_OSX_ARCHITECTURES "ppc;i386;x86_64"
         CACHE STRING "Build architectures for Mac OS X" FORCE)
   endif()
-endif(APPLE)
+endif()
 
 set(SRC alloc.c reclaim.c allchblk.c misc.c mach_dep.c os_dep.c
         mark_rts.c headers.c mark.c obj_map.c blacklst.c finalize.c
@@ -52,25 +71,13 @@ set(SRC alloc.c reclaim.c allchblk.c misc.c mach_dep.c os_dep.c
         mallocx.c)
 set(LIBS)
 
-option(enable_threads "TODO" OFF)
-if (enable_threads)
+if (ENABLE_THREADS)
   find_package(Threads REQUIRED)
   message("Thread Model: ${CMAKE_THREAD_LIBS_INIT}" )
   include_directories(${Threads_INCLUDE_DIR})
   set(LIBS ${LIBS} ${Threads_LIBRARIES})
 endif()
 
-option(enable_handle_fork "Attempt to ensure a usable collector after fork()" ON)
-option(enable_thread_local_alloc "Turn on thread-local allocation optimization" ON)
-option(enable_parallel_mark "Parallelize marking and free list construction" ON)
-
-#IF(Threads_FOUND)
-#       ADD_DEFINITIONS("")
-#ELSE
-#       MESSAGE("Parallel mark requires enable_threads ON" )
-#ENDIF(Threads_FOUND)
-
-#OPTION(enable_cplusplus "install C++ support" ON)
 set(SRC ${SRC} gc_cpp.cc)
 
 set(_HOST ${CMAKE_HOST_SYSTEM_PROCESSOR}--${CMAKE_SYSTEM})
@@ -85,10 +92,10 @@ if (CMAKE_USE_PTHREADS_INIT)
   # Common defines for most POSIX platforms.
   if (HOST MATCHES .*-.*-aix.*|.*-.*-android.*|.*-.*-cygwin.*|.*-.*-darwin.*|.*-.*-.*freebsd.*|.*-.*-haiku.*|.*-.*-gnu.*|.*-.*-hpux11.*|.*-.*-irix.*|.*-.*-.*linux.*|.*-.*-msys.*|.*-.*-nacl.*|.*-.*-netbsd.*|.*-.*-openbsd.*|.*-.*-osf.*|.*-.*-solaris.*)
     add_definitions("-DGC_THREADS -D_REENTRANT")
-    if (enable_parallel_mark)
+    if (ENABLE_PARALLEL_MARK)
       add_definitions("-DPARALLEL_MARK")
     endif()
-    if (enable_thread_local_alloc)
+    if (ENABLE_THREAD_LOCAL_ALLOC)
       add_definitions("-DTHREAD_LOCAL_ALLOC")
       set(SRC ${SRC} thread_local_alloc.c)
     endif()
@@ -109,65 +116,60 @@ if (CMAKE_USE_PTHREADS_INIT)
   if (HOST MATCHES .*-.*-android.*)
     # Android NDK does not provide pthread_atfork.
   elseif (HOST MATCHES .*-.*-aix.*|.*-.*-cygwin.*|.*-.*-freebsd.*|.*-.*-haiku.*|.*-.*-hpux11.*|.*-.*-irix.*|.*-.*-kfreebsd.*-gnu|.*-.*-.*linux.*|.*-.*-netbsd.*|.*-.*-openbsd.*|.*-.*-osf.*|.*-.*-solaris.*)
-    if (enable_handle_fork)
+    if (ENABLE_HANDLE_FORK)
       add_definitions("-DHANDLE_FORK")
-    endif(enable_handle_fork)
+    endif(ENABLE_HANDLE_FORK)
   endif()
   if (HOST MATCHES .*-.*-cygwin.*|.*-.*-msys.*)
     set(SRC ${SRC} win32_threads.c)
   endif()
   if (HOST MATCHES .*-.*-darwin.*)
-    if (enable_handle_fork)
+    if (ENABLE_HANDLE_FORK)
       # The incremental mode conflicts with fork handling.
-      if (enable_parallel_mark)
+      if (ENABLE_PARALLEL_MARK)
         add_definitions("-DHANDLE_FORK")
       endif()
-    endif(enable_handle_fork)
+    endif()
     set(SRC ${SRC} darwin_stop_world.c)
     #TODO darwin_threads=true
   endif()
-endif(CMAKE_USE_PTHREADS_INIT)
+endif()
 
 if (CMAKE_USE_WIN32_THREADS_INIT)
   add_definitions("-DGC_THREADS")
-  if (enable_parallel_mark)
+  if (ENABLE_PARALLEL_MARK)
     add_definitions("-DPARALLEL_MARK")
-    if (enable_thread_local_alloc)
+    if (ENABLE_THREAD_LOCAL_ALLOC)
       add_definitions("-DTHREAD_LOCAL_ALLOC")
       set(SRC ${SRC} thread_local_alloc.c)
     endif()
-  endif(enable_parallel_mark)
+  endif()
   add_definitions("-DEMPTY_GETENV_RESULTS")
   set(SRC ${SRC} win32_threads.c)
-endif(CMAKE_USE_WIN32_THREADS_INIT)
+endif()
 
-option(enable_gcj_support "Support for gcj" ON)
-if (enable_gcj_support)
+if (ENABLE_GCJ_SUPPORT)
   add_definitions("-DGC_GCJ_SUPPORT")
-  if (enable_threads)
+  if (ENABLE_THREADS)
     add_definitions("-DGC_ENABLE_SUSPEND_THREAD")
   endif()
   set(SRC ${SRC} gcj_mlc.c)
-endif(enable_gcj_support)
+endif()
 
-option(enable_disclaim "Support alternative finalization interface" ON)
-if (enable_disclaim)
+if (ENABLE_DISCLAIM)
   add_definitions("-DENABLE_DISCLAIM")
   set(SRC ${SRC} fnlz_mlc.c)
 endif()
 
-option(enable_java_finalization "Support for java finalization" ON)
-if (enable_java_finalization)
+if (ENABLE_JAVA_FINALIZATION)
   add_definitions("-DJAVA_FINALIZATION")
 endif()
 
-option(enable_atomic_uncollectable "Support for atomic uncollectible allocation" ON)
-if (enable_atomic_uncollectable)
+if (ENABLE_ATOMIC_UNCOLLECTABLE)
   add_definitions("-DGC_ATOMIC_UNCOLLECTABLE")
 endif()
 
-option(enable_gc_debug "Support for pointer back-tracing" OFF)
-if (enable_gc_debug)
+if (ENABLE_GC_DEBUG)
   add_definitions("-DDBG_HDRS_ALL -DKEEP_BACK_PTRS")
   if (HOST MATCHES ia64-.*-linux.*|i586-.*-linux.*|i686-.*-linux.*|x86-.*-linux.*|x86_64-.*-linux.*)
     add_definitions("-DMAKE_BACK_GRAPH")
@@ -178,11 +180,10 @@ if (enable_gc_debug)
     add_definitions("-DMAKE_BACK_GRAPH")
     set(SRC ${SRC} backgraph.c)
   endif()
-endif(enable_gc_debug)
+endif()
 
-option(enable_redirect_malloc "Redirect malloc and friends to GC routines" OFF)
-if (enable_redirect_malloc)
-  if (enable_gc_debug)
+if (ENABLE_REDIRECT_MALLOC)
+  if (ENABLE_GC_DEBUG)
     add_definitions("-DREDIRECT_MALLOC=GC_debug_malloc_replacement")
     add_definitions("-DREDIRECT_REALLOC=GC_debug_realloc_replacement")
     add_definitions("-DREDIRECT_FREE=GC_debug_free")
@@ -190,50 +191,41 @@ if (enable_redirect_malloc)
     add_definitions("-DREDIRECT_MALLOC=GC_malloc")
   endif()
   add_definitions("-DGC_USE_DLOPEN_WRAP")
-endif(enable_redirect_malloc)
+endif()
 
-option(enable_mmap "Use mmap instead of sbrk to expand the heap" OFF)
-
-option(enable_munmap "Return page to the OS if empty for N collections" ON)
-if (enable_munmap)
+if (ENABLE_MUNMAP)
   add_definitions("-DUSE_MMAP -DUSE_MUNMAP")
-elseif (enable_mmap)
+elseif (ENABLE_MMAP)
   add_definitions("-DUSE_MMAP")
 endif()
 
-option(enable_dynamic_loading "Enable tracing of dynamic library data roots" ON)
-if (NOT enable_dynamic_loading)
+if (NOT ENABLE_DYNAMIC_LOADING)
   add_definitions("-DIGNORE_DYNAMIC_LOADING")
 endif()
 
-option(enable_register_main_static_data "Perform the initial guess of data root sets" ON)
-if (NOT enable_register_main_static_data)
+if (NOT ENABLE_REGISTER_MAIN_STATIC_DATA)
   add_definitions("-DGC_DONT_REGISTER_MAIN_STATIC_DATA")
 endif()
 
-option(enable_large_config "Optimize for large heap or root set" OFF)
-if (enable_large_config)
+if (ENABLE_LARGE_CONFIG)
   add_definitions("-DLARGE_CONFIG")
 endif()
 
-option(enable_gc_assertions "Enable collector-internal assertion checking" OFF)
-if (enable_gc_assertions)
+if (ENABLE_GC_ASSERTIONS)
   add_definitions("-DGC_ASSERTIONS")
 endif()
 
-option(enable_threads_discovery "Enable threads discovery in GC" ON)
-if (NOT enable_threads_discovery)
+if (NOT ENABLE_THREADS_DISCOVERY)
   add_definitions("-DGC_NO_THREADS_DISCOVERY")
 endif()
 
-option(enable_checksums "Report erroneously cleared dirty bits" OFF)
-if (enable_checksums)
-  if (enable_munmap OR enable_threads)
+if (ENABLE_CHECKSUM)
+  if (ENABLE_MUNMAP OR ENABLE_THREADS)
     message("CHECKSUMS not compatible with USE_MUNMAP or threads")
   endif()
   add_definitions("-DCHECKSUMS")
   set(SRC ${SRC} checksums.c)
-endif(enable_checksums)
+endif()
 
 # Create target
 add_library(gc ${SRC})
@@ -251,6 +243,7 @@ endif()
 # Install library
 install(
     TARGETS gc
+    EXPORT gcExports
     LIBRARY DESTINATION lib 
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin 
@@ -258,7 +251,7 @@ install(
 )
 
 # Install headers
-if (NOT BDWGC_SKIP_HEADERS)
+if (INSTALL_HEADERS)
     file(GLOB BDWGC_HEADERS "include/*.h")
     install(FILES ${BDWGC_HEADERS} DESTINATION include/gc)
 
@@ -267,7 +260,7 @@ if (NOT BDWGC_SKIP_HEADERS)
 endif()
 
 # Install tools
-if (WIN32 AND BDWGC_INSTALL_CORD)
+if (WIN32 AND INSTALL_CORD)
     add_executable(cord 
                    cord/cordbscs.c 
                    cord/cordxtra.c
@@ -288,6 +281,6 @@ if (WIN32 AND BDWGC_INSTALL_CORD)
     )
 endif()
 
-if (NOT BDWGC_SKIP_TESTS)
+if (INSTALL_TESTS)
   add_subdirectory(tests)
 endif()
