--- a/cord/CMakeLists.txt
+++ b/cord/CMakeLists.txt
@@ -13,17 +13,19 @@
 
 # TODO add_library(cord ...)
 
-add_executable(cordtest cordbscs.c cordprnt.c cordxtra.c
-               tests/cordtest.c)
-set_target_properties(cordtest PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
-target_link_libraries(cordtest gc-lib)
-add_test(NAME cordtest COMMAND cordtest)
+if (build_tests)
+  add_executable(cordtest cordbscs.c cordprnt.c cordxtra.c
+                 tests/cordtest.c)
+  set_target_properties(cordtest PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
+  target_link_libraries(cordtest gc-lib)
+  add_test(NAME cordtest COMMAND cordtest)
 
-if (WIN32)
-  add_executable(de cordbscs.c cordxtra.c
-                 tests/de.c tests/de_win.c)
-  set_target_properties(de PROPERTIES WIN32_EXECUTABLE TRUE)
-  set_target_properties(de PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
-  target_link_libraries(de gc-lib)
-  target_link_libraries(de gdi32)
+  if (WIN32)
+    add_executable(de cordbscs.c cordxtra.c
+                   tests/de.c tests/de_win.c)
+    set_target_properties(de PROPERTIES WIN32_EXECUTABLE TRUE)
+    set_target_properties(de PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
+    target_link_libraries(de gc-lib)
+    target_link_libraries(de gdi32)
+  endif(WIN32)
 endif()
