Define _CRT_SECURE_NO_DEPRECATE macro in CMake script only for MS VC (fix of commit f5006fcc5)
Issue #281 (bdwgc).

* CMakeLists.txt (add_definitions): Define _CRT_SECURE_NO_DEPRECATE
only if MSVC (instead of WIN32).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if (APPLE)
     set(CMAKE_OSX_ARCHITECTURES "ppc;i386;x86_64"
         CACHE STRING "Build architectures for Mac OS X" FORCE)
   endif()
-elseif (WIN32)
+elseif (MSVC)
   add_definitions("-D_CRT_SECURE_NO_DEPRECATE")
 endif()
 
