--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE
 
 IF(APPLE)
     IF("${CMAKE_OSX_ARCHITECTURES}" STREQUAL "")
-        SET(CMAKE_OSX_ARCHITECTURES "ppc;i386;x86_64" CACHE STRING "Build architectures for Mac OS X" FORCE)
+        SET(CMAKE_OSX_ARCHITECTURES "x86_64;i386"
+            CACHE STRING "Build architectures for Mac OS X" FORCE)
     ENDIF()
 ENDIF(APPLE)
 
