Rename libgc-lib.a to libgc.a in CMake script
Issue #281 (bdwgc).

Also specify that libgc.a is used privately in test executables.

* CMakeLists.txt (gc-lib): Rename library to gc in add_library and
set_target_properties.
* cord/CMakeLists.txt [build_tests] (cordtest, de): Rename gc-lib to gc
and add PRIVATE in target_link_libraries.
* tests/CMakeLists.txt (gctest, hugetest, leaktest, middletest,
realloc_test, smashtest): Likewise.
* tests/CMakeLists.txt [enable_gc_debug] (tracetest): Likewise.
* tests/CMakeLists.txt [enable_disclaim] (disclaim_bench,
disclaim_test, disclaim_weakmap_test): Likewise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,8 +259,8 @@ if (enable_cplusplus)
   set(SRC ${SRC} gc_cpp.cc)
 endif()
 
-add_library(gc-lib STATIC ${SRC})
-set_target_properties(gc-lib PROPERTIES
+add_library(gc STATIC ${SRC})
+set_target_properties(gc PROPERTIES
                       COMPILE_DEFINITIONS GC_NOT_DLL)
 #TODO TARGET_LINK_LIBRARIES(...  ...  ${LIBS})
 
