--- a/cord/CMakeLists.txt
+++ b/cord/CMakeLists.txt
@@ -17,7 +17,7 @@ if (build_tests)
   add_executable(cordtest cordbscs.c cordprnt.c cordxtra.c
                  tests/cordtest.c)
   set_target_properties(cordtest PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
-  target_link_libraries(cordtest gc-lib)
+  target_link_libraries(cordtest PRIVATE gc)
   add_test(NAME cordtest COMMAND cordtest)
 
   if (WIN32)
@@ -25,7 +25,6 @@ if (build_tests)
                    tests/de.c tests/de_win.c)
     set_target_properties(de PROPERTIES WIN32_EXECUTABLE TRUE)
     set_target_properties(de PROPERTIES COMPILE_DEFINITIONS GC_NOT_DLL)
-    target_link_libraries(de gc-lib)
-    target_link_libraries(de gdi32)
+    target_link_libraries(de PRIVATE gc gdi32)
   endif(WIN32)
 endif()
