--- a/Makefile.am
+++ b/Makefile.am
@@ -198,8 +198,7 @@ EXTRA_DIST += README.QUICK
 # :GOTCHA: deliberately we do not include 'Makefile'
 EXTRA_DIST += BCC_MAKEFILE NT_MAKEFILE \
     OS2_MAKEFILE PCR-Makefile digimars.mak \
-    Makefile.direct SMakefile.amiga WCC_MAKEFILE autogen.sh \
-    CMakeLists.txt cord/CMakeLists.txt tests/CMakeLists.txt
+    Makefile.direct SMakefile.amiga WCC_MAKEFILE autogen.sh CMakeLists.txt
 
 # files used by makefiles other than Makefile.am
 #
